<resources>
    <string name="app_name">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="recettejour">La recette du jour</string>
    <string name="recettesale">Les recettes salées</string>
    <string name="recettesucre">Les recettes sucrées</string>
    <string name="recettehealthy">Les recettes healthy </string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Bienvenue sur cookApp</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>