<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/hello_first_fragment"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRecetteJour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recettejour"
        android:textSize="25sp"
        android:backgroundTint="@color/buttonColor"


        app:layout_constraintBottom_toTopOf="@id/buttonSale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintVertical_bias="0.148" />

    <Button
        android:id="@+id/buttonSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recettesale"
        android:textSize="24sp"
        android:backgroundTint="@color/buttonColor"

        app:layout_constraintBottom_toTopOf="@id/buttonSucre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRecetteJour"
        app:layout_constraintVertical_bias="0.148" />

    <Button
        android:id="@+id/buttonSucre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recettesucre"
        android:textSize="24sp"
        android:backgroundTint="@color/buttonColor"

        app:layout_constraintBottom_toTopOf="@id/buttonHealthy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSale"
        app:layout_constraintVertical_bias="0.148" />

    <Button
        android:id="@+id/buttonHealthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recettehealthy"
        android:textSize="24sp"
        android:backgroundTint="@color/buttonColor"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSucre"
        app:layout_constraintVertical_bias="0.148" />
</androidx.constraintlayout.widget.ConstraintLayout>